# Quirks

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_v0.3.md  test_umlauts.txt
Plan/: COLLABORATION.md  DEVELOPMENT_ROADMAP.md  INDEPENDENT_WORK.md  MEETING-001.md  MEETING-002.md  MEETING-003.md  MEETING_SCHEDULE.md  PROGRESS.md  REQUIREMENTS.md  ROADMAP.md  ROADMAP_v0.4.md  TODO.md
examples/: init.lua
src/: buffer.rs  buffer_manager.rs  config.rs  cursor.rs  editor.rs  gpu_info.rs  history.rs  keymap.rs  lsp.rs  lua_scripting.rs  main.rs  mode.rs  perf.rs  plugin.rs  register.rs  search.rs  selection.rs  substitute.rs  syntax.rs  theme.rs  view.rs
