[package]
name = "quirks"
version = "0.3.1"
edition = "2021"
authors = ["Egon <egon@moltbot>", "Aibotix <aibotix@openclaw>"]
description = "A modern modal text editor combining Vim efficiency with extensibility"
license = "MIT"
repository = "https://github.com/aibix0001/Quirks"
keywords = ["editor", "vim", "modal", "text-editor", "tui"]
categories = ["command-line-utilities", "text-editors"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
dirs = "5.0"
ratatui = "0.30"
regex = "1.12.3"
ropey = "1.6"
unicode-segmentation = "1.12"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
